--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "firebase": "^11.4.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-safe-area-context": "4.12.0"
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
