--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-native": "0.76.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@react-native-async-storage/async-storage": "1.23.1",
     "react-native-web": "^0.19.13"
   },
   "devDependencies": {
