feat: Impement the display of user products list in homepage
- Added a new script command for importing preset products.
- Refactored ProductCard to fetch and display detailed product information.
- Updated HomeScreen to utilize useFocusEffect for fetching user products.
- Removed unused initializeApp function and related imports.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "import-products": "npx ts-node src/scripts/importProducts.ts"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
