--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^7.1.2",
     "expo": "~52.0.37",
     "expo-image-picker": "^16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-router": "^4.0.19",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.4.0",
@@ -32,13 +33,14 @@
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.19.13",
-    "expo-linear-gradient": "~14.0.2"
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.3.3"
   },
   "private": true
