--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "import-products": "npx ts-node src/scripts/importProducts.ts"
+    "import-products": "npx ts-node src/scripts/importProducts.ts",
+    "create-mock-user": "npx ts-node src/scripts/createMockUser.ts"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
