--- a/package.json
+++ b/package.json
@@ -23,22 +23,23 @@
     "expo": "~52.0.37",
     "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "~14.0.2",
+    "expo-location": "~18.0.8",
     "expo-router": "^4.0.19",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.4.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-maps": "^1.18.0",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.19.13",
-    "expo-location": "~18.0.8",
-    "react-native-maps": "1.18.0"
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
