--- a/app.json
+++ b/app.json
@@ -28,7 +28,8 @@
       [
         "expo-image-picker",
         {
-          "photosPermission": "The app needs access to your photos to let you share them with your friends."
+          "photosPermission": "The app needs access to your photos to let you share them with your friends.",
+          "cameraPermission": "The app needs access to your camera to take photos."
         }
       ]
     ]
