--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-camera-roll/camera-roll": "^7.10.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-picker/picker": "^2.11.0",
@@ -26,6 +27,7 @@
     "expo-router": "^4.0.19",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.4.0",
+    "openai": "^4.90.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-dropdown-picker": "^5.4.6",
