--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
     "expo": "~52.0.37",
+    "expo-device": "~7.0.2",
     "expo-image-picker": "^16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-location": "~18.0.8",
+    "expo-notifications": "~0.29.14",
     "expo-router": "^4.0.19",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.4.0",
+    "geolib": "^3.3.4",
     "openai": "^4.90.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
@@ -41,9 +44,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.19.13",
-    "expo-notifications": "~0.29.14",
-    "expo-device": "~7.0.2"
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
