--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-maps": "^1.18.0",
     "react-native-reanimated": "^3.17.1",
