--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@gorhom/bottom-sheet": "^5.1.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-camera-roll/camera-roll": "^7.10.0",
     "@react-native-community/checkbox": "^0.5.17",
@@ -38,9 +39,9 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-emoji-selector": "^0.2.0",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-maps": "^1.18.0",
-    "react-native-reanimated": "^3.17.1",
+    "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
