--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-emoji-selector": "^0.2.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-maps": "^1.18.0",
     "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^4.12.0",
