Modify the config to ensure successful deployment to TestFlight

--- a/app.json
+++ b/app.json
@@ -1,37 +1,92 @@
 {
   "expo": {
-    "name": "Scalor",
-    "slug": "Scalor",
-    "version": "1.0.0",
+    "name": "Tomatch",
+    "slug": "tomatch",
+    "version": "0.0.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "description": "A price comparison and shopping management app",
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.tomatoking.tomatch",
+      "buildNumber": "1",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false,
+        "NSCameraUsageDescription": "This app needs access to your camera to take photos of products.",
+        "NSPhotoLibraryUsageDescription": "This app needs access to your photos to let you select product images.",
+        "NSLocationWhenInUseUsageDescription": "This app needs access to your location to show nearby stores.",
+        "NSUserNotificationsUsageDescription": "This app needs to send you notifications about price changes and shopping lists.",
+        "NSRemindersUsageDescription": "This app uses reminders to notify you about shopping tasks."
+      }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.tomatoking.tomatch",
+      "versionCode": 1,
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.READ_MEDIA_IMAGES",
+        "android.permission.RECEIVE_BOOT_COMPLETED",
+        "android.permission.VIBRATE",
+        "android.permission.POST_NOTIFICATIONS",
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/icon.png"
     },
     "plugins": [
       [
         "expo-image-picker",
         {
-          "photosPermission": "The app needs access to your photos to let you share them with your friends.",
-          "cameraPermission": "The app needs access to your camera to take photos."
+          "photosPermission": "The app needs access to your photos to let you select product images.",
+          "cameraPermission": "The app needs access to your camera to take photos of products."
+        }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow Tomatch to use your location to find nearby stores."
+        }
+      ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/icon.png",
+          "color": "#ffffff",
+          "androidMode": "default",
+          "androidCollapsedTitle": "Tomatch",
+          "iosDisplayInForeground": true
         }
       ]
-    ]
+    ],
+    "owner": "gnblink",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/64a66df8-2893-48ef-a394-2385e2a8e74b"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "bb97e8d2-da16-49dd-b005-93902cfaa9a5"
+      }
+    }
   }
 }
